REGRESSION (r147588): Line breaks occur in the middle of Hebrew words at haaertz.co.il and other websites https://bugs.webkit.org/show_bug.cgi?id=114721

Reviewed by Dean Jackson.

Source/WebCore:

Tests: fast/text/line-break-after-empty-inline-hebrew.html
       fast/text/line-break-after-inline-latin1.html

If prior context changes content or length after creating line break iterator, then need to
create new iterator with new prior context instead of using cached iterator with old prior context.

* platform/text/TextBreakIterator.h:
(WebCore::LazyLineBreakIterator::LazyLineBreakIterator): Initialize members to cache reference to initialized prior context.
(WebCore::LazyLineBreakIterator::get): Create new iterator if prior context content reference changes.
(WebCore::LazyLineBreakIterator::resetStringAndReleaseIterator): Reset cached prior context references.
(LazyLineBreakIterator): Add members to cache reference to initialized prior context.

LayoutTests:

* fast/text/line-break-after-empty-inline-hebrew-expected.txt: Added.
* fast/text/line-break-after-empty-inline-hebrew.html: Added.
* fast/text/line-break-after-inline-latin1-expected.txt: Added.
* fast/text/line-break-after-inline-latin1.html: Added.
* platform/mac/fast/writing-mode/Kusa-Makura-background-canvas-expected.txt: Rebaseline.


Canonical link: https://commits.webkit.org/133301@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@148791 268f45cc-cd09-0410-ab3c-d52691b4dbfc